--- a/present/index.html
+++ b/present/index.html
@@ -1,4 +1,4 @@
-CTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Title</title>
@@ -32,4 +32,3 @@ CTYPE html>
     </script>
   </body>
 </html>
-
