--- a/pewpew/index.html
+++ b/pewpew/index.html
@@ -373,8 +373,10 @@ function about() {
            // add hit to the arc queue
            // use strokeColor to set arc line color
 
-           var srclat = slatlong[src].lat;
-           var srclong = slatlong[src].long;
+           //var srclat = slatlong[src].lat;
+           //var srclong = slatlong[src].long;
+           var srclat = 43.1603659
+           var srclong = -77.5832005
            var dstlat = slatlong[dst].lat;
            var dstlong = slatlong[dst].long;
            which_attack = attack_type[Math.floor((Math.random() * attack_type.length))];
