updated meeting page with the same content as on index

--- a/meeting-2015-11-06.back-to-the-future-edition.html
+++ b/meeting-2015-11-06.back-to-the-future-edition.html
@@ -65,7 +65,12 @@
                 </header>
             </section>
             <p>We now live so far in the future that we don't need roads. Join
-            us as we fuel our minds with garbage at another 2600 meeting.</p>
+            us as we fuel our minds with garbage at another 2600 meeting.
+            (make sure you bring your
+            <a href="https://www.youtube.com/watch?v=-KCFlbhDSm4">hoverboards</a>,
+            <a href="https://www.youtube.com/watch?v=zcvbHJ1BZ9s">self-lacing shoes</a>,
+            and <a href="http://is.gd/08ehJs">metal hats</a>!)
+            </p>
 <ul>
 <li>antitree: This month in infosec</li>
 <li>/dev/urand: 5err challenge</li>
