--- a/meeting-2016-04-01-aprilfools-edition.html
+++ b/meeting-2016-04-01-aprilfools-edition.html
@@ -8,7 +8,7 @@
         <link rel="alternate"  href="http://www.rochester2600.com/feeds/all.atom.xml" type="application/atom+xml" title="Rochester 2600 Full Atom Feed"/>
         <link rel="alternate" href="http://www.rochester2600.com/feeds/latest.atom.xml" type="application/atom+xml" title="Rochester 2600 Atom Feed"/>
 
-        <title>Meeting 3/4/2016: Unknown Edition // Rochester 2600 // </title>
+        <title>Meeting 4/1/2016: April Fool's Edition // Rochester 2600 // </title>
 
     <link href="/images/favicon.png" rel="icon">
 
